--- a/estilo.css
+++ b/estilo.css
@@ -14,19 +14,14 @@ header {
 	background-color: black;
 	border: 4px solid #c01717;
 	width: 100%;
-	height: 95px;
+	height: 11vh;
 	opacity: 0.5;
 	transition: 0.4s;
 	
 }
 
 header:hover {
-	position: fixed;
-	display: flex; 
-	flex-wrap: wrap;
-	background-color: black;
-	border: 4px solid #c01717;
-	width: 100%;
+	
 	opacity: 1;
 
 }
@@ -49,7 +44,7 @@ nav {
 	margin: auto;
 	}
 
-i { display: inline-block;
+i {/*  display: inline-block; */
 	color: #c01717;
 	margin: 10px;
 
@@ -70,10 +65,20 @@ i { display: inline-block;
 	color: #c01717;
 }
 
-.menu-responsive {
-	display: none;
 
+.menu-responsive__li {
+	margin: 10px;
+	font-size: 23px;
+	
 }
+
+.menu-responsive__li:hover > a {
+	color: #c01717;
+}
+
+.menu-responsive {
+		display: none;
+	}
 
 .header__Search {
 	padding: 10px;
@@ -104,49 +109,13 @@ i { display: inline-block;
 	margin-left: 30px;
 	height: 80px;
 	padding: 5px;
-
+	
 }
 
 
 /**----------------- FOOTER ---------------------*/
 
-.footer_redes {
-	display: flex;
-	border: 0px solid red;
-	width: 31vh;
-	font-size: 1.5vh;
-	margin-left: 135vh;
-	
-}
 
-.footer_redes img{
-	
-	height: 5vh;
-	align-items: center;
-}
-
-.footer_redes img:hover {
-	height: 5.5vh;
-}
-
-.footer_redes h2{
-	padding-top: 13px;
-	padding-right: 3px;
-	color:rgb(8, 8, 8);
-	text-align: center;
-}
-
-.footer_redes h2:hover {
-	color: #c01717;
-}
-
-.footer_redes a{
-	padding: 10px 5px;
-}
-
-.foco{
-	padding-left: 12px;
-}
 
 .footer{
 	margin-top: 10vh;
@@ -165,12 +134,6 @@ i { display: inline-block;
 }
 
 
-.copyright {
-	font-size: 18px;
-	text-align: center;
-	padding-bottom: 3vh;
-	padding-top: 3vh;
-}
 
 .footer_cont { 
 	margin-left: 10vh;
@@ -179,7 +142,7 @@ i { display: inline-block;
 
 .footer_cont h4{
 	justify-content: center;
-	font-size: 20px;
+	font-size: 3vh;
 	text-align: center;
 	color: hsl(0, 77%, 38%);
 	text-shadow: 0px 1px 1px black;
@@ -187,8 +150,8 @@ i { display: inline-block;
 }
 
 .footer_cont il{
-	font-size: 17px;
-	display: inline;
+	font-size: 2vh;
+	
 }
 
 
@@ -196,29 +159,45 @@ i { display: inline-block;
 	color: #e7dcdc;
 }
 
-
-@media only screen and ( max-width: 990px) {
-	.menu__li {
-		display: none;
-	}
-	.logo_header {
-		display: none;
-	}
-	.Search__text {
-		display: none;
-	}
-	.Search__button {
-		display: none;
-	}
-	
-	.menu-responsive {
-		display: flex;
-	}
-	
-	header {
-		height: 100px;
-	}
+.footer_redes {
+	margin-top: 2vh;
+	display: flex;
+	font-size: 1.5vh;
+	margin-left: calc(65%);
 }
+
+
+.footer_redes img:hover {
+	height: 5.5vh;
+}
+
+.footer_redes h2{
+	padding-top: 13px;
+	padding-right: 3px;
+	color:rgb(8, 8, 8);
+	text-align: center;
+}
+
+.footer_redes h2:hover {
+	color: #c01717;
+}
+
+
+.footer_redes i{
+	padding: 4px 10px 10px 10px;
+	font-size: 4vh;
+	text-align: center;
+}
+
+
+
+.copyright {
+	font-size: 18px;
+	text-align: center;
+	padding-bottom: 3vh;
+	padding-top: 3vh;
+}
+
 
 
 /** --------------- INDEX -------------**/
@@ -228,11 +207,12 @@ i { display: inline-block;
 	position: absolute;
 	margin-left: calc(0% - 50vh);
 	padding-top: 10vh;
-
+	
 }
 
 .fondo {
 	display: flex;
+	width: 100%;
 }
 
 .fondo img{
@@ -264,8 +244,8 @@ i { display: inline-block;
 	height: 80vh;
 	box-shadow: 2px 2px 15px black;
 	background-color: #999898e8
-
-
+	
+	
 }  
 
 .index_content__taller img{
@@ -299,7 +279,7 @@ i { display: inline-block;
 	margin-left: 33%;
 	margin-top: 5vh;
 	
-
+	
 }
 
 .Marcas img {
@@ -318,6 +298,7 @@ i { display: inline-block;
 	margin-top: 15vh;
 	margin-left: 15%;
 	margin-bottom: 5%;
+	padding-bottom: 10vh;
 	
 }
 
@@ -333,6 +314,8 @@ i { display: inline-block;
 	height: 4vh;
 	background-color: transparent;
 	border-bottom: 2px solid #c01717;
+	text-shadow: 1px 1px 1px black;
+
 	
 	
 }
@@ -345,6 +328,8 @@ i { display: inline-block;
 	background-color: transparent;
 	border-bottom: 2px solid #c01717;
 	font-size: 18px;
+	text-shadow: 1px 1px 1px black;
+
 }
 
 .form_chico::placeholder {
@@ -374,18 +359,18 @@ i { display: inline-block;
 .form_btn {
 	display: flex;
 	height: 4vh;
-	width: 70vh;
+	width: 100%;
 	margin-top: 2vh;
+	justify-content: center;
 	background-color: #c01717;
 	border: none;
-	padding-left: 50%;
 	padding-top: 1vh;
 	color: #e7dcdc;
 }
 
 .form_btn:hover {
 	border: 2px solid black;
-	font-style: initial;
+	
 }
 
 .info_local {
@@ -401,14 +386,14 @@ i { display: inline-block;
 }
 
 
-/** --------------- FIN CONTACTO ----------------- **/
+/** ---------------------- FIN CONTACTO ----------------- **/
 
 
 
 
 
 
-/** -------------------------------- TURNOS --------------------------------*/
+/** ---------------------- TURNOS --------------------------------*/
 
 
 
@@ -436,7 +421,7 @@ i { display: inline-block;
 	font-size: 50px;
 	text-align: center;
 	color: #c01717;
-
+	
 	
 }
 
@@ -455,7 +440,7 @@ i { display: inline-block;
 	overflow:hidden;
 	display: flex;
 	outline: none;
-
+	
 }
 
 .turnos input[type="time"]{
@@ -467,7 +452,7 @@ i { display: inline-block;
 	margin-left: 25px;
 	outline: none;
 	
-
+	
 }
 
 ::-webkit-calendar-picker-indicator{
@@ -527,7 +512,7 @@ i { display: inline-block;
 	overflow:hidden;
 	outline: none;
 	font-size: 20px;
-
+	
 }
 
 .turnos input[type="textarea"]::placeholder{
@@ -556,7 +541,10 @@ i { display: inline-block;
 .turnos_fondo {
 	background-image: url(Motos/fondo_turnos.jpg);
 	background-size: cover;
-
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	
 	
 }
 
@@ -588,7 +576,7 @@ i { display: inline-block;
 .garage_intro img {
 	margin: auto;
 	margin-left: 20px;
-
+	
 }
 
 .garage_cont {
@@ -638,7 +626,118 @@ i { display: inline-block;
 	text-align: center;
 	padding-top: 4vh;
 	text-shadow: 2px 2px 2px hsl(0, 4%, 5%);
-
+	
 }
 
+
+
+/* -----------------RESPONSIVE------------------- */
+	
+
+
+@media only screen and ( max-width: 481px) {
+	header{
+		width: 481px;
+	}
+
+	header b{
+		display: none;
+	}
+
+	.menu__li {
+		display: none;
+	}
+
+	.Search__text {
+		display: none;
+	}
+	.Search__button {
+		display: none;
+	}
+
+	.menu-responsive{
+		display: flex;
+		margin-top: 15px;
+	
+	}
+	
+	.logo_header {
+		display: none;
+	}
+
+	/* HASTA ACA HEADER */
+
+
+	/* CONTACTO */
+
+
+	.conten_form{
+		margin-left: 0;
+		margin-bottom: 0;
+		padding: 10px;
+ 		display: flex;
+		flex-direction: column;
+		gap: 10vh;
+	}
+
+
+	.conten_form h2{
+		font-size: 4vh;
+		text-align: center;
+	
+	}
+
+	.form_chico{
+		width: 60vh;
+		text-align: center;
+	}
+
+	.form_grande{
+		width: 60vh;
+		text-align: center;
+	}
+
+	
+	
+	.info_local{
+		margin: 0;
+		text-align: center;
+		padding: 10px;
+	}
+
+
+	.footer_cont{
+		margin: 0;
+		align-items: center;
+	}
+
+	.footer_redes h2{
+		display: none;
+	}
+
+	.footer_redes{
+		display: flex;
+		flex-wrap: wrap;
+		margin: auto;
+		width: 150px;
+		margin-right: 1px;
+		font-size: 2vh;
+	}
+
+	.footer_redes i{
+		font-size: 3vh;
+		padding: 10px;
+		text-align: right;
+	}
+
+	.footer_redes i:hover{
+		color: white;
+	
+	}
+	}
+
+
+
+
+	
 
