--- a/assets/CSS/estilo.css
+++ b/assets/CSS/estilo.css
@@ -35,9 +35,9 @@ b {
 	font-size: 30px;
 }
 
-/* a {
+a {
 	text-decoration: none;
-	color: white;} */
+	color: white;}
 
 nav {
 	background-color: black;
@@ -385,6 +385,11 @@ i {/*  display: inline-block; */
 	border-bottom-right-radius: 5%;
 }
 
+.maps2{
+	display: none;
+}
+
+
 
 /** ---------------------- FIN CONTACTO ----------------- **/
 
@@ -539,7 +544,7 @@ i {/*  display: inline-block; */
 }
 
 .turnos_fondo {
-	background-image: url(Motos/fondo_turnos.jpg);
+	background-image: url("/assets/images/Motos/fondo_turnos.jpg");
 	background-size: cover;
 	width: 100%;
 	height: 100%;
@@ -556,7 +561,7 @@ i {/*  display: inline-block; */
 	display: flex;
 	width: 100%;
 	height: 60vh;
-	background-image: url("garage_intro.jpg");
+	background-image: url("/assets/images/garage_intro.jpg");
 	background-size: cover;
 	border-bottom: 3px solid #c01717;
 }
@@ -632,10 +637,8 @@ i {/*  display: inline-block; */
 
 
 /* -----------------RESPONSIVE------------------- */
-
-/* RESOLUCION 481 * 768 */
 	
-/* COMIEZO DE HEADER */
+
 
 @media only screen and ( max-width: 481px) {
 	header{
@@ -660,19 +663,55 @@ i {/*  display: inline-block; */
 	.menu-responsive{
 		display: flex;
 		margin-top: 15px;
-		
+		background-color: transparent;
+	
 	}
 	
 	.logo_header {
 		display: none;
 	}
-	
+
 	/* HASTA ACA HEADER */
+
+
+	/* CONTACTO */
+
+
+	.conten_form{
+		margin-left: 0;
+		margin-bottom: 0;
+		padding: 10px;
+ 		display: flex;
+		flex-direction: column;
+		gap: 10vh;
+	}
+
+
+	.conten_form h2{
+		font-size: 4vh;
+		text-align: center;
+	
+	}
+
+	.form_chico{
+		width: 60vh;
+		text-align: center;
+	}
+
+	.form_grande{
+		width: 60vh;
+		text-align: center;
+	}
+
 	
 	
-	/* ACA COMINEZA FOOTER */ 
-	
-	
+	.info_local{
+		margin: 0;
+		text-align: center;
+		padding: 10px;
+	}
+
+
 	.footer_cont{
 		margin: 0;
 		align-items: center;
@@ -702,166 +741,103 @@ i {/*  display: inline-block; */
 	
 	}
 	}
-	
-	/* FIN DE FOOTER */
-	
-	
-	/* CONTACTO */
-	
-	
-	.conten_form{
-		margin-left: 0;
-		margin-bottom: 0;
-		padding: 10px;
-		display: flex;
-		flex-direction: column;
-		gap: 10vh;
-	}
-	
-	
-	.conten_form h2{
-		font-size: 4vh;
-		text-align: center;
-		
-	}
-	
-	.form_chico{
-		width: 60vh;
-		text-align: center;
-	}
-	
-	.form_grande{
-		width: 60vh;
-		text-align: center;
-	}
-	
-	
-	
-	.info_local{
-		margin: 0;
-		text-align: center;
-		padding: 10px;
-	}
 
 
-/* RESOLUCION 320*480 */
 
-	
 	@media only screen and ( max-width: 320px) {
 		header{
 			width: 320px;
 		}
-	
-		header b{
-			display: none;
-		}
-	
-		.menu__li {
-			display: none;
-		}
-	
-		.Search__text {
-			display: none;
-		}
-		.Search__button {
-			display: none;
-		}
-	
+
+		
+
 		.menu-responsive{
-			display: flex;
 			margin: 0;
-			
+			padding-top: 9px;
+
 		}
 
 		.menu-responsive a{
-			display: none;
-		}
-		
-		.logo_header {
-			display: none;
-		}
-		
-		/* FIN DE HEADER */
-		
-
-
-		
-		/* ACA COMINEZA FOOTER */ 
-		
-		
-		.footer_cont{
+			padding: 0;
 			margin: 0;
-			align-items: center;
+			font-size: 20px;
+
 		}
-	
-		.footer_redes h2{
+
+		.menu-responsive i{
 			display: none;
 		}
-	
-		.footer_redes{
-			display: flex;
-			flex-wrap: wrap;
-			margin: auto;
-			width: 150px;
-			margin-right: 1px;
-			font-size: 2vh;
+
+		.conten_form_cont h2{
+			font-size: 7vh;
+			padding-bottom: 10px;
 		}
-	
-		.footer_redes i{
-			font-size: 3vh;
-			padding: 10px;
-			text-align: right;
-		}
-	
-		.footer_redes i:hover{
-			color: white;
-		
-		}
-		}
-		
-		/* FIN DE FOOTER */
-		
-		
-		/* CONTACTO */
-		
-/* 		
-		.conten_form{
-			margin-left: 0;
-			margin-bottom: 0;
-			padding: 10px;
-			display: flex;
-			flex-direction: column;
-			gap: 10vh;
-		}
-		
-		
-		.conten_form h2{
-			font-size: 4vh;
-			text-align: center;
 			
-		}
-		
 		.form_chico{
-			width: 60vh;
-			text-align: center;
+			font-size: 4vh;
 		}
-		
+
+		.form_grande::placeholder{
+			font-size: 5vh;
+			color: #ffffff;
+			text-shadow: 1px 1px 1px #c01717;
+		}
+
+		.form_btn{
+			margin-top: 15px;
+			height: 5.5vh;
+
+		}
+
+		.form_chico{
+			width: 100%;
+		}
+
 		.form_grande{
-			width: 60vh;
-			text-align: center;
+			width: 100%;
 		}
-		
-		
-		
-		.info_local{
-			margin: 0;
-			text-align: center;
-			padding: 10px;
+
+		.footer_cont  h4{
+			display: none;
 		}
-	 
-	 */
-	
-	
-	
-	
+
+		.footer_cont i{
+			font-size: 12px;
+		}
+
+		.footer_cont il{
+			font-size: 14px;
+		}
+
+		.footer_cont il:hover{
+			font-size: 16px;
+		}
+
+
+		.footer_redes i{
+			padding: 0;
+			margin: 6px;
+			font-size: 20px;
+		}
+
+
+
+
+
+		.maps{display: none;
+		}	
+		
+		.maps2{
+			padding-top: 5vh;
+			display: flex;
+			margin: -10px;
+			border-bottom-right-radius: 5%;
+		}
+
+
+
+
+	}
+
+
 	
