--- a/assets/CSS/estilo.css
+++ b/assets/CSS/estilo.css
@@ -14,7 +14,7 @@ header {
 	background-color: black;
 	border: 4px solid #c01717;
 	width: 100%;
-	height: 11vh;
+	height: 10vh;
 	opacity: 0.5;
 	transition: 0.4s;
 	
@@ -26,7 +26,7 @@ header:hover {
 
 }
 
-b {
+header.b {
 	color: #c01717;
 	padding-left: 40px;
 	padding-top: 1em;
@@ -44,20 +44,26 @@ nav {
 	margin: auto;
 	}
 
-i {/*  display: inline-block; */
+i {
 	color: #c01717;
 	margin: 10px;
 
 }
 
+.menu{
+	background-color: transparent;	
+}
+
+
 .menu__li {
 	margin: 10px;
 	font-size: 23px;
-	display: inline-block;
 	}
 
 .menu__ul {
+		display: flex;
 		margin-top: -20px;
+		
 	}
 
 
@@ -135,23 +141,29 @@ i {/*  display: inline-block; */
 
 
 
-.footer_cont { 
-	margin-left: 10vh;
-	
+
+.footer{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	}
+
+.footer_redes i:hover{
+	color: #ffffff ;
 }
 
+.footer_cont{ 
+	margin-left: 100px;
+} 
+
 .footer_cont h4{
-	justify-content: center;
 	font-size: 3vh;
-	text-align: center;
 	color: hsl(0, 77%, 38%);
 	text-shadow: 0px 1px 1px black;
 	margin-top: 1vh;
 }
 
-.footer_cont il{
+.footer_cont ul{
 	font-size: 2vh;
-	
 }
 
 
@@ -160,10 +172,14 @@ i {/*  display: inline-block; */
 }
 
 .footer_redes {
-	margin-top: 2vh;
+	grid-column: 3;
+	justify-content: right;
+	padding-right: 100px;
 	display: flex;
+	flex-direction: wrap;
+	margin-top: 3vh;
 	font-size: 1.5vh;
-	margin-left: calc(65%);
+
 }
 
 
@@ -184,9 +200,10 @@ i {/*  display: inline-block; */
 
 
 .footer_redes i{
-	padding: 4px 10px 10px 10px;
+	padding: 2px 5px 5px 5px;
 	font-size: 4vh;
 	text-align: center;
+	
 }
 
 
@@ -295,6 +312,8 @@ i {/*  display: inline-block; */
 
 .conten_form {
 	display: flex;
+	gap: 15vh;
+	flex-wrap: wrap;
 	margin-top: 15vh;
 	margin-left: 15%;
 	margin-bottom: 5%;
@@ -310,8 +329,8 @@ i {/*  display: inline-block; */
 
 .form_chico {
 	border: none;
-	width: 70vh;
 	height: 4vh;
+	width: 70vh;
 	background-color: transparent;
 	border-bottom: 2px solid #c01717;
 	text-shadow: 1px 1px 1px black;
@@ -373,9 +392,30 @@ i {/*  display: inline-block; */
 	
 }
 
-.info_local {
-	margin-left: 25vh;
+.form_error{
+	display: none;
+	background-color: red;
+	border: 2px solid black;
+	margin-top: 1vh;
+	padding: 15px;
+	font-size: 20px;
+	text-align: center;
+	color:#e7dcdc;
+	text-shadow: 2px 2px 4px black;	
 }
+
+.form_ok{
+	display: none;
+	background-color: #009700;
+	margin-top: 1vh;
+	padding: 10px;
+	text-align: center;
+	color:#e7dcdc;
+	text-shadow: 2px 2px 4px black;
+}
+
+
+
 
 .info_local h2 {
 	margin-bottom: 1vh;
@@ -635,209 +675,3 @@ i {/*  display: inline-block; */
 }
 
 
-
-/* -----------------RESPONSIVE------------------- */
-	
-
-
-@media only screen and ( max-width: 481px) {
-	header{
-		width: 481px;
-	}
-
-	header b{
-		display: none;
-	}
-
-	.menu__li {
-		display: none;
-	}
-
-	.Search__text {
-		display: none;
-	}
-	.Search__button {
-		display: none;
-	}
-
-	.menu-responsive{
-		display: flex;
-		margin-top: 15px;
-		background-color: transparent;
-	
-	}
-	
-	.logo_header {
-		display: none;
-	}
-
-	/* HASTA ACA HEADER */
-
-
-	/* CONTACTO */
-
-
-	.conten_form{
-		margin-left: 0;
-		margin-bottom: 0;
-		padding: 10px;
- 		display: flex;
-		flex-direction: column;
-		gap: 10vh;
-	}
-
-
-	.conten_form h2{
-		font-size: 4vh;
-		text-align: center;
-	
-	}
-
-	.form_chico{
-		width: 60vh;
-		text-align: center;
-	}
-
-	.form_grande{
-		width: 60vh;
-		text-align: center;
-	}
-
-	
-	
-	.info_local{
-		margin: 0;
-		text-align: center;
-		padding: 10px;
-	}
-
-
-	.footer_cont{
-		margin: 0;
-		align-items: center;
-	}
-
-	.footer_redes h2{
-		display: none;
-	}
-
-	.footer_redes{
-		display: flex;
-		flex-wrap: wrap;
-		margin: auto;
-		width: 150px;
-		margin-right: 1px;
-		font-size: 2vh;
-	}
-
-	.footer_redes i{
-		font-size: 3vh;
-		padding: 10px;
-		text-align: right;
-	}
-
-	.footer_redes i:hover{
-		color: white;
-	
-	}
-	}
-
-
-
-	@media only screen and ( max-width: 320px) {
-		header{
-			width: 320px;
-		}
-
-		
-
-		.menu-responsive{
-			margin: 0;
-			padding-top: 9px;
-
-		}
-
-		.menu-responsive a{
-			padding: 0;
-			margin: 0;
-			font-size: 20px;
-
-		}
-
-		.menu-responsive i{
-			display: none;
-		}
-
-		.conten_form_cont h2{
-			font-size: 7vh;
-			padding-bottom: 10px;
-		}
-			
-		.form_chico{
-			font-size: 4vh;
-		}
-
-		.form_grande::placeholder{
-			font-size: 5vh;
-			color: #ffffff;
-			text-shadow: 1px 1px 1px #c01717;
-		}
-
-		.form_btn{
-			margin-top: 15px;
-			height: 5.5vh;
-
-		}
-
-		.form_chico{
-			width: 100%;
-		}
-
-		.form_grande{
-			width: 100%;
-		}
-
-		.footer_cont  h4{
-			display: none;
-		}
-
-		.footer_cont i{
-			font-size: 12px;
-		}
-
-		.footer_cont il{
-			font-size: 14px;
-		}
-
-		.footer_cont il:hover{
-			font-size: 16px;
-		}
-
-
-		.footer_redes i{
-			padding: 0;
-			margin: 6px;
-			font-size: 20px;
-		}
-
-
-
-
-
-		.maps{display: none;
-		}	
-		
-		.maps2{
-			padding-top: 5vh;
-			display: flex;
-			margin: -10px;
-			border-bottom-right-radius: 5%;
-		}
-
-
-
-
-	}
-
-
-	
