--- a/assets/CSS/estilo.css
+++ b/assets/CSS/estilo.css
@@ -163,7 +163,7 @@ i {
 }
 
 .footer_cont ul{
-	font-size: 2vh;
+	font-size: 2.3vh;
 }
 
 
@@ -329,9 +329,11 @@ i {
 	color: hsl(0, 77%, 38%);
 	text-shadow: 1px 1px 2px black;
 	margin-top: 1vh;
+	font-size: 3.5vh;
 }
 
 .form_chico {
+	font-size: 2.5vh;
 	border: none;
 	height: 4vh;
 	width: 100%;
@@ -419,7 +421,11 @@ i {
 }
 
 
-
+.info_local p{
+	font-size: 2.5vh;
+	color:#e7dcdc;
+	text-shadow: 3px 3px 5px black;
+}
 
 .info_local h2 {
 	margin-bottom: 1vh;
